# chippy

./: .gitignore  Cargo.toml
src/: debugger.rs  instruction.rs  main.rs  ui.rs  vm.rs
src/instruction/: arthimetic.rs  branch.rs  draw.rs  load.rs  logical.rs
src/subsystem/: key.rs
src/ui/: cpu.rs  keypad.rs  memory.rs  menu.rs
