[package]
name = "chippy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
derive_more = "0.99.16"
egui = "0.14.2"
egui-macroquad = "0.6.0"
fnv = "1.0.7"
macroquad = "0.3.9"
nanorand = "0.6.1"
rfd = "0.4.4"

[profile.release]
lto = "thin"
